[] -- Hacer el boton favoritos

--- a/app/src/main/res/layout/fragment_favorites_profile.xml
+++ b/app/src/main/res/layout/fragment_favorites_profile.xml
@@ -9,8 +9,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favoritesRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/common_margin" />
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/common_margin"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/home_item" />
 
     <ProgressBar
         android:id="@+id/favoritesProgressBar"
@@ -25,7 +28,7 @@
         android:id="@+id/emptyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/favorites_empty"
+        android:text="@string/self_empty"
         android:textSize="@dimen/text_tittle"
         android:textStyle="bold"
         android:visibility="gone"
@@ -33,6 +36,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
